examples/sort/klee-out-0/test000003.pc
array len[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Slt 5
                  N0:(ReadLSB w32 0 len)))
         (Slt 1 N0)]
        false)
